[package]
name = "esp32-c6-simulation"
version = "0.1.0"
authors = ["Andrei Stepanenko <ftvkyo@gmail.com>"]
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
esp-backtrace = { version = "0.14.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "esp32c6" ] }
esp-println = { version = "0.11.0", default-features = false, features = [
    "esp32c6",
    "log",
    # Restore default features:
    "colors",
    "critical-section",
    # Enforce UART for println as the default "auto" may not work:
    "uart",
]}
log = { version = "0.4.21" }
micromath = "2.1.0"
ssd1306 = "0.9.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
